[tool.poetry]
name = "playgrounds"
version = "0.1.0"
description = "Collection of programming experiments."
authors = ["Julius Huizing <J.B.Huizing@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
